sampleapp2/hello-k8s-Service.yml
# hello-kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hellok8s
  name: hello-kubernetes
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
