sampleapp2/hello-k8s-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hellok8s
  name: hello-k8s-ingress-service
  annotations:
    #kubernetes.io/ingress.class: nginx  
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: hellok8s.ibera.fun
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                port: 
                  number: 80
  tls:
  - hosts:
    - hellok8s.ibera.fun
    secretName: hellok8s-myaks-secret
